# winotes

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
winotes/: __init__.py  winotes.py
