[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "winotes"
version = "0.1.0"
description = "An unofficial Python wrapper for Windows Sticky Notes"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["windows", "sticky-notes", "sqlite"]
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/JeanTheMan/winotes"